Increased the z-index of #main to try and fix mobile scrolling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,6 +170,7 @@ nav a {
         text-align: justify;
         padding: 15px 30px;
         width: 100%;
+        z-index:10;
     }
 
     nav {
